Fix alignment of progress bar text.

--- a/Courses/Classes/progressbar.fui.css
+++ b/Courses/Classes/progressbar.fui.css
@@ -79,6 +79,7 @@
 .FUIProgressBarText > span
 {
 	vertical-align: middle;
+	display: block;
 }
 
 
